# physics-sim

./: .gitignore  CMakeLists.txt  README.md  config.h.in
include/collision-sim/: particle.h  rigid_body.h  rigid_circle.h  simulator.h
include/glad/: glad.h
include/graphics/: application.h  camera.h  render_object.h  renderer.h  shader.h  window.h
include/graphics/shapes/: circle.h  rect.h
include/orbital-sim/: body.h  camera.h  physics_engine.h  render_object.h  renderer.h  shader.h  simulator.h  window.h
shaders/: basic2d.frag  basic2d.vert  colored_shape.vert
src/: body.cpp  camera.cpp  main.cpp  physics_engine.cpp  render_object.cpp  renderer.cpp  shader.cpp  simulator.cpp  window.cpp
src/collision-sim/: main.cpp  particle.cpp  rigid_circle.cpp  simulator.cpp
src/graphics/: application.cpp  camera.cpp  render_object.cpp  renderer.cpp  shader.cpp  window.cpp
src/graphics/shapes/: circle.cpp  rect.cpp
src/orbital-sim/: body.cpp  main.cpp  physics_engine.cpp  simulator.cpp
